--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Exercice JS</title>
+	<title>Walid JS</title>
     <link rel="stylesheet" href="style.css">
     
 
@@ -14,11 +14,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<buton class="btn btn-success" id="buton">click me!</buton>
+					<buton class="btn btn-success" id="buton">Walid me!</buton>
 				</div><!-- /col -->
 				<div class="col-md-6">
 					<div class="jumbotron bg-info">
-						<h2>Notez le tp</h2>
+						<h2>Notez Walid</h2>
 						<div id="scuare" class="progress-bar bg-warning progress-bar-striped">
 							<h1 id="title" class="d-flex justify-content-center" placeholder="0"></h1>
 						</div>						
